[tool.poetry]
name = "volttron-core"
version = "2.0.0rc14"
description = "VOLTTRON™ is an open source platform for distributed sensing and control. The platform provides services for collecting and storing data from buildings and devices and provides an environment for developing applications which interact with that data."
authors = ["volttron <volttron@pnnl.gov>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://volttron.org"
repository = "https://github.com/eclipse-volttron/volttron-core"
documentation = "https://volttron.readthedocs.org"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "volttron", from = "src" },
    { include = "volttron/py.typed", from = "src" },
    { include = "volttron_core_fixtures", from = "tests" }
]

include = [
    "bom_reports/**/*"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
poetry = "^2.0"
python = "^3.10"
gevent = ">=24.2.1,<24.3"
PyYAML = "^6.0"
toml = "^0.10.2"
dateutils = "^0.6.12"
tzlocal = "^4.1"
psutil = "^5.9.0"
cryptography = "^43.0.1"
watchdog-gevent = "^0.1.1"
pip = "^24.0"
pytest-timeout = "^2.3.1"
pytest-mock = "^3.10.0"
deprecated = "^1.2.14"
blinker = "^1.7.0"
dataclass-wizard = "^0.22.3"
returns = "^0.22.0"
cattrs = "^23.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
yapf = "^0.32.0"
toml = "^0.10.2"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
volttron = 'volttron.server.__main__:main'
vcfg = 'volttron.client.commands.config:main'
volttron-cfg = 'volttron.client.commands.config:main'
vctl = 'volttron.client.commands.control:main'
volttron-ctl = 'volttron.client.commands.control:main'

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 120
split_before_logical_operator = true

[tool.mypy]
show_error_context = true
pretty = true
show_column_numbers = true
